--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-react": "7.17.0",
     "eslint-plugin-react-hooks": "2.3.0",
+    "gh-pages": "^2.2.0",
     "parcel-bundler": "1.12.4",
     "parcel-plugin-bundle-visualiser": "1.2.0",
     "prettier": "1.19.1",
@@ -26,7 +27,8 @@
     "dev": "yarn clean && parcel src/index.html -p 3000",
     "lint": "tsc --noEmit --skipLibCheck && eslint 'src/**/*.{js,ts,tsx}' --max-warnings=0",
     "format": "eslint 'src/**/*.{js,ts,tsx}' --max-warnings=0 --fix",
-    "clean": "rm -rf .cache && rm -rf ./dist/* && mkdir -p ./dist"
+    "clean": "rm -rf .cache && rm -rf ./dist/* && mkdir -p ./dist",
+    "ghpages": "yarn build --public-url='/card-browser' && node gh-pages.js"
   },
   "dependencies": {
     "components": "^0.1.0",
